--- a/week1/index.html
+++ b/week1/index.html
@@ -5,13 +5,16 @@
     <title>Document</title>
 </head>
 
+
+
 <FRAMESET rows="25%, 75%">
-    <frame name="top" src="frames/top.html"/>
-    <FRAMESET cols="20%, 80%">
-        <frame name= "links" src="frames/links.html"/>
+    <frame name="top" src="frames/top.html" noresize="noresize"/>
+    <FRAMESET cols="10%, 80%">
+        <frame name= "links" src="frames/links.html" noresize="noresize"/>
         <frame name= "main" src=""/>
     </FRAMESET>
 </FRAMESET>
+
 <body>
    <!-- code  -->
 </body>
