--- a/week1/frames/links.html
+++ b/week1/frames/links.html
@@ -13,6 +13,8 @@
             <li><a href="../pages/login.html" target="main">Login</a></li>
             <li><a href="../pages/reg.html" target="main">Reg</a></li>
             <li><a href="../pages/about.html" target="main">about</a></li>
+            <li><a href="../pages/about.html" target="main">contact</a></li>
+            
         </ul>
     </nav> 
 </body>
